--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^0.22.0",
     "cheerio": "^1.0.0-rc.10",
-    "pretty": "^2.0.0"
+    "chromedriver": "^94.0.0",
+    "pretty": "^2.0.0",
+    "selenium-webdriver": "^4.0.0",
+    "webdriver-manager": "^12.1.8"
   }
 }
